Wed Feb 29 15:00:12 UTC 2012  Brian Johnson  <johnsonb@ociweb.com>

        * tools/scripts/lcov.pl:

          Cleanup whitespace.

Tue Feb 28 19:20:55 UTC 2012  Brian Johnson  <johnsonb@ociweb.com>

        * tools/scripts/lcov.pl:

          Removing prefix for generated coverage html.

Tue Feb 28 17:01:00 UTC 2012  Brian Johnson  <johnsonb@ociweb.com>

        * tools/scripts/lcov.pl:

          Script for processing DDS coverage data with lcov.

Thu Feb 23 17:12:24 UTC 2012  Adam Mitz  <mitza@ociweb.com>

        * dds/DCPS/RTPS/ParameterListConverter.cpp:
        * tests/DCPS/UnitTests/ut_ParameterListConverter.cpp:

          For interoperability, always encode the RELIABILITY QoS
          value (even when it's the default and therefore not required
          to be included).

Thu Feb 23 16:37:44 UTC 2012  Jeff Schmitz  <schmitzj@ociweb.com>

        * dds/DCPS/RTPS/ParameterListConverter.cpp:

          Adjust comments to no longer say TODO.

Thu Feb 23 15:08:10 UTC 2012  Brian Johnson  <johnsonb@ociweb.com>

        * MPC/config/coverage_optional.mpb:

          Changed to "--coverage" flags which set all appropriate flags
          for coverage.

        * dds/DCPS/DataReaderImpl.cpp:

          Fixed initialization order.

Wed Feb 22 20:02:27 UTC 2012  Brian Johnson  <johnsonb@ociweb.com>

        * dds/DCPS/ConfigUtils.cpp:

          Verifying section was actually opened (coverity).

        * dds/DCPS/DataReaderImpl.cpp:

          Cleaned up overly complex code and ctor initialization
          (coverity).

        * dds/DCPS/RepoIdConverter.h:
        * dds/DCPS/RepoIdConverter.cpp:

          Changed federationId and participantId to use appropriate
          type (coverity).

        * dds/DCPS/ZeroCopySeq_T.cpp:

          Fixed missed setting of sc_buffer_ (coverity).

Wed Feb 22 19:52:02 UTC 2012  Brian Johnson  <johnsonb@ociweb.com>

        * tests/DCPS/KeyTest/run_test.pl:
        * tests/DCPS/PersistentDurability/run_test.pl: